--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,37 +1,24 @@
 .footer {
-    display: grid;
-    padding-left: 1rem;
-    padding-right: 1rem;
+  justify-items: center;
+  gap:0;
+}
+  
+/*@media (min-width: 1024px) {
+  .footer {
     grid-template-areas:
-      "content content"
-      "followUs contactUs"
+      "content followUs"
       "copyRight copyRight";
-    grid-template-rows: auto 3rem;
-    grid-template-columns: 1fr 1fr;
-    gap: 2.5rem;
   }
+}*/
+
+.footer-content {
+  margin-right: auto;
+}
   
-  @media (min-width: 1024px) {
-    .footer {
-      grid-template-areas:
-        "content followUs contactUs"
-        "copyRight copyRight copyRight";
-      grid-template-columns: 12fr 2fr minmax(7rem, 1fr);
-    }
-  }
+.footer-followUs {
   
-  .footer-content {
-    grid-area: content;
-  }
+}
   
-  .footer-followUs {
-    grid-area: followUs;
-  }
-  
-  .footer-contactUs {
-    grid-area: contactUs;
-  }
-  
-  .footer-copyRight {
-    grid-area: copyRight;
-  }
+.footer-copyRight {
+  justify-items: center;
+}
