--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
 
 .main-layout {
   display: grid;
+  margin: 0;
   min-height: 100vh;
   grid-template-areas: 
     'header'
@@ -38,6 +39,9 @@ body {
   grid-area: content;
   background-color: #FFF9F0;
   color: #2B2B2B;
+  max-width: calc(100% - 360px);
+  margin-top: 80px;
+  margin-bottom: 160px;
 }
 
 .footer {
